--- a/cicada-ioc/pom.xml
+++ b/cicada-ioc/pom.xml
@@ -9,24 +9,15 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>cicada-core</artifactId>
+    <artifactId>cicada-ioc</artifactId>
     <version>2.0.0</version>
     <packaging>jar</packaging>
 
-    <name>cicada-core</name>
-    <description>Fast, lightweight Web framework based on Netty</description>
-    <url>https://crossoverjie.top/categories/cicada/</url>
-    <licenses>
-        <license>
-            <name>The Apache Software License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-        </license>
-    </licenses>
 
     <dependencies>
         <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
+            <groupId>top.crossoverjie.opensource</groupId>
+            <artifactId>cicada-base</artifactId>
         </dependency>
 
         <dependency>
@@ -51,14 +42,6 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>top.crossoverjie.opensource</groupId>
-            <artifactId>cicada-base</artifactId>
-        </dependency>
     </dependencies>
 
     <build>
@@ -75,5 +58,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
